--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&family=Montserrat:wght@300;400;600;700&display=swap%27');
-
-@font-face {
-    font-family: 'Lemon';
-    src: local('Lemon'), url(./fonts/LEMONMILK-Medium.otf) format('opentype');
-}
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&family=Roboto+Slab:wght@400;500;700;800;900&family=Varela+Round&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 
 @tailwind base;
 @tailwind components;
